--- a/preseed.cfg
+++ b/preseed.cfg
@@ -1,9 +1,9 @@
 ### Localization
 d-i debian-installer/locale string en_US
 d-i debian-installer/language string en
-d-i debian-installer/country string RU
+d-i debian-installer/country string US
 d-i debian-installer/locale string en_US.UTF-8
-d-i localechooser/supported-locales multiselect en_US.UTF-8, ru_RU.UTF-8
+d-i localechooser/supported-locales multiselect en_US.UTF-8
 
 # Keyboard selection.
 d-i console-tools/archs select at
@@ -21,7 +21,7 @@ d-i hw-detect/load_firmware boolean true
 
 ### Mirror settings
 d-i mirror/country string manual
-d-i mirror/http/hostname string ftp.yandex.ru
+d-i mirror/http/hostname string ftp.de.debian.org
 d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
 d-i mirror/suite string wheezy
@@ -35,7 +35,7 @@ d-i passwd/user-password-again password vagrant
 
 ### Clock and time zone setup
 d-i clock-setup/utc boolean true
-d-i time/zone string Europe/Moscow
+d-i time/zone string Europe/Berlin
 d-i clock-setup/ntp boolean true
 
 ### Partitioning
