--- a/preseed.cfg
+++ b/preseed.cfg
@@ -57,7 +57,7 @@ d-i apt-setup/volatile_host string volatile.debian.org
 ### Package selection
 tasksel tasksel/first multiselect
 
-d-i pkgsel/include string openssh-server build-essential nfs-common puppet ruby ruby-dev rubygems ssh ca-certificates curl
+d-i pkgsel/include string build-essential openssh-server ssh ca-certificates bzip2
 d-i pkgsel/upgrade select safe-upgrade
 
 popularity-contest popularity-contest/participate boolean false
